# funrun

./: .gitignore  CMakeLists.txt  README.md  funtrace.json  funtrace1.json  funtrace2.json  funtrace3.json  gentrace.py  h723runrate.ioc  ozone.jdebug  simple.json  stamp1.txt  stamp2.txt  stamp2log.txt  stamp2plot.txt  stamp3.txt  stm32h723zgtx_flash.ld
Core/Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h  tim.h
Core/Src/: freertos.c  gpio.c  main.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
